# University-Projects

./: LICENSE  README.md
1942 Game Implementation (Programming)/: HUD.py  board.py  bomber.py  bullet.py  collisions.py  constants.py  enemybullet.py  explosion.py  main.py  my_resource.pyxres  plane.py  player.py  playerbullet.py  pyvenv.cfg  red.py  regular.py  superbomber.py
1942 Game Implementation (Programming)/assets/: my_resource.pyxres
Computer Technology/lab2/: L2.vhdl  truth table.xlsx
Criptography and Security/: .gitignore  README.md  autores.txt  certificados.py  criptografia.py  db_create.py  funciones_interfaz.py  gestionReviews.py  main.py
Criptography and Security/clases/: juegos.py  reviews.py  usuarios.py
Criptography and Security/graphics/: game_review.py  login.py  main_page.py  signup.py  solicitud_certificado.py  transicion_certificado.py  transition.py  window.py
Data Structures and Algorithms/phase1/: phase1.py  phase1_unittest.py  slistH.py
Data Structures and Algorithms/phase2/: phase2.py  test_unittest.py
Heuristics and Optimization/lab1/: .gitignore
Heuristics and Optimization/lab2/: autores.txt
Heuristics and Optimization/lab2/parte-2/: ASTAR-calls.sh  CMakeLists.txt  main.cpp
Heuristics and Optimization/lab2/parte-2/src/: ASTAR.hpp  build_solution.cpp  build_solution.hpp  read_map.cpp  read_map.hpp
Heuristics and Optimization/lab2/parte-2/src/structures/: aviones.hpp  floyd-warshall.hpp  graph.hpp  states.hpp
Software Development/GE3/: README.md
User Interfaces/p1/: main.html
User Interfaces/p2/: .gitignore  (+1 more)
(+79 files in other folders)
